# try-db

./: .gitignore  Cargo.toml  README.md  anusha.txt  bala.db  hello.txt
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
db/: anusha.db  bala.db
